<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/weather_app_drawable_white_rectangle_top_rounded_corners"
    android:orientation="vertical"
    android:paddingHorizontal="15dp"
    android:paddingVertical="25dp">

    <ImageView
        android:id="@+id/closeButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:src="@drawable/weather_app_ic_delete" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/minTempLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/weather_app_min_temperature_long"
            android:textSize="15sp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/maxTempLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/minTempTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/maxTempTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/minTempLabel"
            tools:text="3°"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/maxTempLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/weather_app_max_temperature_long"
            android:textSize="15sp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/perceivedTemperatureLabel"
            app:layout_constraintStart_toEndOf="@id/minTempLabel"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/maxTempTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/perceivedTemperatureTV"
            app:layout_constraintStart_toEndOf="@id/minTempTV"
            app:layout_constraintTop_toBottomOf="@id/maxTempLabel"
            tools:text="7°"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/perceivedTemperatureLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/weather_app_perceived_temperature"
            android:textSize="15sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/maxTempLabel"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/perceivedTemperatureTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/maxTempTV"
            app:layout_constraintTop_toBottomOf="@id/perceivedTemperatureLabel"
            tools:text="7°"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/probabilityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/weather_app_precipitation_percentage"
        android:textSize="15sp"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/probabilityPercentageTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:visibility="gone"
        tools:text="Assenti"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/windLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/weather_app_wind_speed"
        android:textSize="15sp"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/windSpeedTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:visibility="gone"
        tools:text="3 m/s"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/cloudinessLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/weather_app_cloudiness"
        android:textSize="15sp"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/cloudsPercentageTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:visibility="gone"
        tools:text="10%"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/humidityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/weather_app_humidity_percentage"
        android:textSize="15sp"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/humidityPercentageTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:visibility="gone"
        tools:text="15%"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/visibilityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/weather_app_visibility"
        android:textSize="15sp"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/visibilityTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:visibility="gone"
        tools:text="3 Km"
        tools:visibility="visible" />
</LinearLayout>